# tfm2022

./: .env.distributed  .env.local  .gitignore  README.md  all_feedbacks.csv  all_feedbacks_df.csv  api.restclient  bulk-load.js  dashboard.py  defaults.yml  docker-compose.yaml  lines-of-code.sh  list-deleteable-files.sh  main.py  mod_feedback.csv  pyproject.toml  pyrightconfig.json  run-api.bat  run-api.sh  run-dashboard.bat  run-dashboard.sh  run-jupyter.sh  run-local.sh  run.sh  run_analisis.sh  run_read.sh  run_ui.sh  setup.py  test.sh
MEMORIA/: TFGM-JoseLuisDomenech.odt
analysis/: cache.py  cluster.py  config.py
analysis/api/: api.py  endpoints.py  models.py  services.py
analysis/cluster/: cluster.py
analysis/dashboard/: app.py  dashboard.py  daterange.py  fetcher.py
analysis/feedback/: fb_source.py  models.py
analysis/process/: analyze.py  dmerge.py  fetcher.py  fetcher.py.rej  merge.py  merging.py
analysis/sensors/: mg_source.py  models.py
api/: api.py  endpoints.py  models.py  services.py
conf/: config.yml
containers/: init-local.sh
containers/conf/mongo/conf/: mongod.conf
containers/conf/redis/: redis.acl
containers/dockerfiles/: Dockerfile
containers/dockerfiles/fastapi/: Dockerfile
containers/dockerfiles/node/: Dockerfile
dashboard/: apiaccess.py  app.py  callbacks.py  lo_analysis.py  lo_general_info.py  lo_sidebar.py  run.py  server.py  styles.py  wsgi.py
db/: docker-compose.yaml
db/conf/mongo/conf/: mongod.conf
db/conf/mongo/script/: 001_users.js  002_data.sh
local_runtime/: all_feedback_data.csv  docker-compose.yaml  init-local.sh
local_runtime/conf/mongo/script/: 001_users.js  002_data.sh
python-scripts/: generate-data-in-firebase.py  generate-data-in-mongodb.py  generate-data.py  read-data-from-firebase.py  read-data-from-mongodb.py  store_all_firebase_to_file.py  vars.py
src/: config.py
src/analisis/: df_load.py
src/dask/: setup_client.py
src/feedback/: fb_source.py  fs_source.py  models.py
src/process/: analyze.py  merging.py
src/sensors/: mg_source.py
src/ui/: app.py
tests/: custom_config.yaml  test_config.py  test_feeback.py  test_sensor.py  test_sensor_integration.py  test_utils.py
tests/test_api/: test_.py
utils/: analize-data-from-firebase.py  generate-data-in-firebase.py  read-data-from-firebase.py
