[tool.poetry]
name = "analisis-feedback-datos"
version = "0.1.0"
description = ""
authors = ["José L. Doménech"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
firebase-admin = "^5.2.0"
dask = {extras = ["complete"], version = "^2022.5.0"}
dateparser = "^1.1.1"
dash = "^2.4.1"

[tool.poetry.dev-dependencies]
pyright = "^1.1.246"
pytest = "^7.1.2"
jupyter = "^1.0.0"
graphviz = "^0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
