[tool.poetry]
name = "analisis-feedback-datos"
version = "0.1.0"
description = ""
authors = ["José L. Doménech"]

[tool.poetry.dependencies]
# -- mantener sincronizado con el scheduler/workers --
python = "3.8.13"
dask = {extras = ["complete"], version = "2022.05.2"}
distributed = "2022.5.2"
lz4 = "4.0.0"
msgpack = "1.0.3"
# -- hasta aqui --
firebase-admin = "^5.0.0"
grpcio = "1.46.3"
pydantic = "^1.9.0"
dateparser = "^1.1.1"
dash = "^2.4.1"
pymongo = {extras = ["srv"], version = "^4.1.1"}
cachey = "^0.2.1"
plotly = "^5.8.0"
PyYAML = "^6.0"
python-dotenv = "^0.20.0"
pandas = "^1.4.2"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pyright = "^1.1.246"
pytest = "^7.1.2"
jupyter = "^1.0.0"
graphviz = "^0.20"
mock = "^4.0.3"
pytest-mock = "^3.7.0"
jupyter-dash = "^0.4.2"
pylint = "^2.14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "-ra -q"
testpaths = [
   "tests",
]

[tool.pylint.messages_control]
disable = """C0326, W0621, C0111, C0103, W0702, W0703, C0321, W0511, W0102, R0913,
         R0914, R0915, R0912, R0902, R0903, C0303, C0302, C0325, W0401"""